# eml-craft

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/eml_craft/: __init__.py  catalog.py  engine.py  main.py  schemas.py  store.py
apps/api/tests/: test_api.py  test_engine.py
apps/web/: eslint.config.js  index.html  package.json  tsconfig.json
apps/web/src/: App.tsx  styles.css
apps/web/src/components/: Canvas.tsx  GoalsPanel.tsx  GraphPanel.tsx  Inspector.tsx  MathLabel.tsx  RecipePanel.tsx  Sidebar.tsx
apps/web/src/lib/: api.ts  expression.test.ts  expression.ts  plot.test.ts  plot.ts  sound.ts
docs/: architecture.md  deployment.md  math-recognition.md
