[project]
name = "eml-craft-api"
version = "0.1.0"
description = "FastAPI backend for EML Craft."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "mpmath>=1.3.0",
  "pydantic>=2.8.0",
  "sympy>=1.13.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eml_craft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

